Responsive overflow issue fixed

--- a/src/components/ComingSoon/ComingSoon.css
+++ b/src/components/ComingSoon/ComingSoon.css
@@ -62,7 +62,20 @@
   background-color: #299764;
   padding-left: 10px;
   padding-right: 10px;
-  /* background-color: #e9f9ee; */
+}
+.youSaveContainerCarousel {
+  border-radius: 15px;
+  background-color: #299764;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.youSaveContainerCarousel p {
+  margin-top: 0px;
+  margin-bottom: 0;
+  color: #e9f9ee;
+  font-size: 12px;
+  padding-bottom: 3px;
 }
 
 .youSaveContainer p {
